@@ -4,6 +4,7 @@ trunk
 * added deprecation warning for argument 'all'=TRUE in mxPath()
 * eliminated flattenModelHelper() and replaced with functions that use lapply()
 * changed signature of genericObjModelConvert() to return list(job, flatJob) in order to improve performance
+* added '@likelihoods' slot for MxFIMLObjective and MxRAMObjective (when using raw data)
 
 Beta Release 999.0.0-1690 (June 27, 2011)
 =========================================
